Eve songs Title change

--- a/public/index.html
+++ b/public/index.html
@@ -676,8 +676,8 @@
             <td>43</td>
             <td>
               <div class="track-info">
-                <img src="Images/문학.webp" alt="Literary Nonsense cover" class="album-thumb">
-                <span>Literary Nonsense</span>
+                <img src="Images/문학.webp" alt="Nonsense Bungaku cover" class="album-thumb">
+                <span>Nonsense Bungaku</span>
               </div>
             </td>
             <td>Eve</td>
@@ -845,7 +845,7 @@
 
       {src:'songs/잔치.mp3', title:'Demons Banquet', artist:'Tomonari Sora #41', duration:'3:00'},
       {src:'songs/Gravity.mp3', title:'Burst The Gravity', artist:'ALTIMA #42', duration:'4:27'},
-      {src:'songs/Nonsense.mp3', title:'Literary Nonsense', artist:'Eve #43', duration:'3:26'},
+      {src:'songs/Nonsense.mp3', title:'Nonsense Bungaku', artist:'Eve #43', duration:'3:26'},
       {src:'songs/Bokurawa.mp3', title:'Sakuramitsutsuki', artist:'SPYAIR #44', duration:'3:36'},
       {src:'songs/Peace.mp3', title:'Peace Sign', artist:'Yonezu Kenshi #45', duration:'3:57'},
       {src:'songs/VIP.mp3', title:'V.I.P', artist:'Sid #46', duration:'3:13'},
